# worldpop-tiles

./: .gitignore  CMakeLists.txt  Country.cpp  Country.h  CountryList.cpp  CountryList.h  DownSampler.cpp  DownSampler.h  GeoRect.h  Gradient.h  README.md  Task.h  TileBatch.cpp  TileBatch.h  TilePng.cpp  TilePng.h  TileRect.h  Tiling.h  WorkerPool.h  build-100m.sh  build-1km.sh  build.gradle  colors-100m.cpt  colors.cpt  countries.txt  download-100m.sh  download.sh  main.cpp  merge-tiles.py  test.html
gradle/wrapper/: gradle-wrapper.properties
publish/gcs/: create-bucket.sh  upload.sh
src/main/java/: ColorGradient.java  CompositeBuffer.java  Countries.java  Country.java  CountrySet.java  CountrySubset.java  DownsampleTask.java  Downsampler.java  GcsStore.java  GcsUploader.java  GeoRect.java  MbTiles.java  Png.java  Progress.java  Reprojection.java  SourceImage.java  SourceSubset.java  Tile.java  TileBatch.java  TileBuffer.java  TileFileStore.java  TileImage.java  TileReader.java  TileRect.java  TileRegion.java  TileRenderQueue.java  TileRenderTask.java  TileSet.java  TileStore.java  TileUploader.java  Tiling.java  Tms.java  WorldPopTiler.java  WriteBuffer.java
src/test/java/: TileSetTest.java
